--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
-
-}
 section {
 	margin-block: 6em;
 }
@@ -125,6 +122,11 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
+	display: flex;
+	justify-content: center;
+	background:none;
+	border:none;
+	cursor:pointer;
 }
 #banner .arrow_left {
 	left: 10px;
@@ -178,9 +180,7 @@ header {
 	padding-left:2em;
 	width: 65%;
 	margin-bottom: 1em;
-
 }
-
 #products {
 	display: flex;
 	align-items: flex-start;
@@ -210,7 +210,6 @@ header {
 #question p {
 	margin-bottom: 20px;
 }
-
 #why-us {
 	display: flex;
 	flex-direction: column;
@@ -233,7 +232,6 @@ header {
 	margin-block: 0;
 	object-fit: contain;
 }
-
 .bg-lightblue{
 	background-color: #E6F4FB;
 }
@@ -243,19 +241,15 @@ header {
 #contact article, #contact div {
 	flex:1;
 }
-
-
 #contact .container {
 	flex-direction: row;
 	display: flex;
 	padding: 6em ;
 }
-
 #contact .container > div > div {
 	display: flex;
 	padding-bottom: 20px;
 }
-
 #contact h3 {
 	margin-top: 0;
 	background: url("./images/tricolor-icon.png") no-repeat left top;
